# qecs

./: CMakeLists.txt
example/: CMakeLists.txt  example.cpp
include/qecs/: config.hpp  identifier.hpp  qecs.hpp  storage.hpp  string_hash.hpp  type_info.hpp
include/qecs/core/: config.hpp  segment_list.hpp  sparse_set.hpp  storage.hpp  string_hash.hpp  type_info.hpp
